fix(style): wrong button appearance on iOS

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -65,6 +65,7 @@ img.wp-post-image {
 input, textarea {
   background: lighten(@formBaseColor, 8%);
   border: 1px solid lighten(@formBaseColor, 8%);
+  appearance: none;
 
   &:active {
     background: darken(@formBaseColor, 3%);
